concord_macros/tests/dsl/fail/fail_cache_capacity_zero.rs
use concord_macros::api;

api! {
    client CacheCapacityZeroApi {
        base "https://example.com"

        cache bad {
            capacity 0 entries
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
